# llm-benchmark

./: .gitignore  LLM_benchmarks.py  README.md  pyproject.toml  run_benchmarks.sh
llm_benchmarks/: __init__.py  __main__.py  api.py  core.py  models.py  parsers.py  storage.py
llm_benchmarks/tui/: __init__.py  components.py  interactive.py  styles.py
